Program to run snowflake query via JDBC driver.
Cursor generated.